style/refactor: created a css class for History's carousel  imgs' sizes and reused it across the project whilst corrected imgs' sizes. For 1280+ screens, added a gap-x. For 1536, increased max-w of the section's container

--- a/src/index.css
+++ b/src/index.css
@@ -177,6 +177,9 @@
     color: var(--yellow-main);
     margin-bottom: 1.5rem;
   }
+  .history-carousel-img {
+    width: 70vw;
+  }
 }
 
 /* ── Utilities ── */
@@ -208,57 +211,71 @@
 }
 
 @media (min-width: 600px) {
-  :root {
-    .section-title {
-      font-size: 3.5rem;
-    }
-    .drink-title {
-      font-size: 2rem;
-    }
+  .section-title {
+    font-size: 3.5rem;
+  }
+  .drink-title {
+    font-size: 2rem;
+  }
 
-    .drink-details {
-      font-size: 1.5rem;
-    }
-    .history-font-size {
-      font-size: 1.375rem;
-    }
+  .drink-details {
+    font-size: 1.5rem;
+  }
+  .history-font-size {
+    font-size: 1.375rem;
+  }
+}
+.history-carousel-img {
+  width: 48vw;
+}
+
+@media (min-width: 1024px) {
+  .history-carousel-img {
+    width: 30vw;
+  }
+}
+
+@media (min-width: 1280px) {
+  .history-carousel-img {
+    width: 24vw;
   }
 }
 
 @media (min-width: 2460px) {
-  :root {
-    .bg-img-right {
-      margin-right: 30rem;
-    }
-    .h1-margin {
-      margin-right: 10rem;
-    }
-    nav ul li a {
-      font-size: 2rem;
-    }
-    nav a {
-      font-size: 5rem;
-    }
-    nav {
-      padding: 3rem 6rem;
-    }
-    .card-width {
-      max-width: 400px;
-    }
-    .drink-title {
-      font-size: 2.25rem;
-    }
-    .dots-top {
-      margin-top: 2rem;
-    }
-    .section-title {
-      font-size: 5rem;
-    }
-    .drink-details {
-      font-size: 1.75rem;
-    }
-    #drink-description {
-      font-size: 1.3rem;
-    }
+  .bg-img-right {
+    margin-right: 30rem;
+  }
+  .h1-margin {
+    margin-right: 10rem;
+  }
+  nav ul li a {
+    font-size: 2rem;
+  }
+  nav a {
+    font-size: 5rem;
+  }
+  nav {
+    padding: 3rem 6rem;
+  }
+  .card-width {
+    max-width: 400px;
+  }
+  .drink-title {
+    font-size: 2.25rem;
+  }
+  .dots-top {
+    margin-top: 2rem;
+  }
+  .section-title {
+    font-size: 5rem;
+  }
+  .drink-details {
+    font-size: 1.75rem;
+  }
+  #drink-description {
+    font-size: 1.3rem;
+  }
+  .history-carousel-img {
+    width: 16vw;
   }
 }
